# fastapi-ws-manager

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: fastapi_app.py
src/fastapi_ws_manager/: __init__.py  auth.py  manager.py
tests/: test_manager.py
