[tool.poetry]
name = "fastapi-ws-manager"
version = "0.1.0"
description = "Pluggable FastAPI websocket management helpers with auth, client-timeout liveness, and connection pooling."
authors = ["Abhi <abhi@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/<org>/<repo>"
repository = "https://github.com/<org>/<repo>"
packages = [{ include = "fastapi_ws_manager", from = "src" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.116.0,<1.0.0"
pyjwt = { version = ">=2.10.1,<3.0.0", extras = ["crypto"] }

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.1,<9.0.0"
pytest-asyncio = ">=1.0.0,<2.0.0"
httpx = ">=0.28.1,<1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
